--- a/presentation/src/main/res/navigation/mobile_navigation.xml
+++ b/presentation/src/main/res/navigation/mobile_navigation.xml
@@ -17,6 +17,10 @@
             tools:layout="@layout/articles_list_fragment">
         <action
                 android:id="@+id/action_navigation_articles_to_articleCreation"
+                app:enterAnim="@anim/nav_default_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim"
                 app:destination="@id/articleCreation" />
     </fragment>
     <fragment
