--- a/presentation/src/main/res/layout/history_fragment.xml
+++ b/presentation/src/main/res/layout/history_fragment.xml
@@ -77,8 +77,10 @@
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/background" />
+                    app:layout_constraintTop_toBottomOf="@+id/background"
+                    app:layout_constraintVertical_bias="0.0" />
 
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                     android:id="@+id/fabPrint"
@@ -117,15 +119,17 @@
             <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvEmptyReceipts"
                     style="@style/EmptyScreenText"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="32dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="32dp"
                     android:gravity="center_horizontal"
                     android:lines="2"
                     android:text="@string/no_receipts"
-                    app:layout_constraintEnd_toEndOf="@+id/appLogo"
-                    app:layout_constraintStart_toStartOf="@+id/appLogo"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/appLogo" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
